--- a/Bibtex.bib
+++ b/Bibtex.bib
@@ -7,16 +7,17 @@
 }
 
 @article{EGA1,
-  title={{\'E}l{\'e}ments de g{\'e}om{\'e}trie alg{\'e}brique: I. Le langage des sch{\'e}mas},
+  title={{\'E}l{\'e}ments de g{\'e}om{\'e}trie alg{\'e}brique: {I}. {Le} langage des sch{\'e}mas},
   author={Grothendieck, Alexander},
   journal={Publications Math{\'e}matiques de l'IH{\'E}S},
   volume={4},
   pages={5--228},
-  year={1960}
+  year={1960},
+  shorthand = {EGA I}
 }
 
 @article{EGA2,
-  title={{\'E}l{\'e}ments de g{\'e}om{\'e}trie alg{\'e}brique: II. {\'E}tude globale {\'e}l{\'e}mentaire de quelques classes de morphismes},
+  title={{\'E}l{\'e}ments de g{\'e}om{\'e}trie alg{\'e}brique: {II}. {{\'E}tude} globale {\'e}l{\'e}mentaire de quelques classes de morphismes},
   author={Grothendieck, Alexander},
   journal={Publications Math{\'e}matiques de l'IH{\'E}S},
   volume={8},
@@ -25,12 +26,64 @@
 }
 
 @article{EGA3,
-  title={{\'E}l{\'e}ments de g{\'e}om{\'e}trie alg{\'e}brique: III. {\'E}tude cohomologique des faisceaux coh{\'e}rents, premi{\`e}re partie},
+  title={{\'E}l{\'e}ments de g{\'e}om{\'e}trie alg{\'e}brique: {III}. {{\'E}tude} cohomologique des faisceaux coh{\'e}rents, premi{\`e}re partie},
   author={Grothendieck, Alexander},
   journal={Publications Math{\'e}matiques de l'IH{\'E}S},
   volume={11},
   pages={5--167},
   year={1961}
+}
+
+@article{EGA4,
+     title = {{\'E}l{\'e}ments de g{\'e}om{\'e}trie alg{\'e}brique: {IV}. {{\'E}tude} locale des sch\'emas et des morphismes de sch\'emas, {Quatri\`eme} partie},
+     author = {Grothendieck, Alexander},
+     journal = {Publications Math\'ematiques de l'IH\'ES},
+     pages = {5--361},
+     publisher = {Institut des Hautes \'Etudes Scientifiques},
+     volume = {32},
+     year = {1967},
+     zbl = {0153.22301},
+     language = {fr}
+}
+
+@book{SGA1,
+  title={Rev{\^e}tements {\'E}tales et Groupe Fondamental: S{\'e}minaire de G{\'e}om{\'e}trie Alg{\'e}brique du Bois Marie 1960/61 (SGA 1)},
+  author={Grothendieck, Alexander and Raynaud, Michele},
+  volume={224},
+  year={2006},
+  publisher={Springer}
+}
+
+
+@book{SGA3,
+  title={Sch{\'e}mas en groupes},
+  author={Grothendieck, Alexandre and Demazure, Michel},
+  year={1963},
+  publisher={Institut des Hautes Etudes Scientifiques}
+}
+
+@book{SGA4-1,
+  title={Th{\'e}orie des Topos et Cohomologie Etale des Sch{\'e}mas. S{\'e}minaire de G{\'e}om{\'e}trie Alg{\'e}brique du Bois-Marie 1963-1964 (SGA 4): Tome 1},
+  author={Artin, Michael and Grothendieck, Alexandre and Verdier, Jean Louis},
+  series={Lecture Notes in Mathematics},
+  year={2006},
+  publisher={Springer}
+}
+
+@book{SGA4-2,
+  title={Th{\'e}orie des Topos et Cohomologie Etale des Sch{\'e}mas. S{\'e}minaire de G{\'e}om{\'e}trie Alg{\'e}brique du Bois-Marie 1963-1964 (SGA 4): Tome 2},
+  author={Artin, Michael and Grothendieck, Alexandre and Verdier, Jean Louis},
+  series={Lecture Notes in Mathematics},
+  year={2006},
+  publisher={Springer}
+}
+
+@book{SGA4-3,
+  title={Th{\'e}orie des Topos et Cohomologie Etale des Sch{\'e}mas. S{\'e}minaire de G{\'e}om{\'e}trie Alg{\'e}brique du Bois-Marie 1963-1964 (SGA 4): Tome 3},
+  author={Artin, Michael and Grothendieck, Alexandre and Verdier, Jean Louis},
+  series={Lecture Notes in Mathematics},
+  year={2006},
+  publisher={Springer}
 }
 
 @book{Bourbaki_Topo1-4,
@@ -121,4 +174,37 @@ title = {Algèbre: Chapitre 9},
   author={Bourbaki, Nicolas},
   year={2006},
   publisher={Springer Berlin Heidelberg}
+}
+
+@book{kashiwara_SAC,
+  title={Categories and Sheaves},
+  author={Kashiwara, Masaki and Schapira, Pierre},
+  series={Grundlehren der mathematischen Wissenschaften},
+  year={2005},
+  publisher={Springer Berlin Heidelberg}
+}
+
+@article{tohoku,
+  title={Sur quelques points d'alg{\`e}bre homologique, I},
+  author={Alexander Grothendieck},
+  journal={Tohoku Mathematical Journal},
+  year={1957},
+  volume={9},
+  pages={119-221}
+}
+
+@misc{Nitsure_rep_of_Hom,
+      title={Representability of Hom implies flatness}, 
+      author={Nitin Nitsure},
+      year={2003},
+      eprint={math/0308036},
+      primaryClass={math.AG}
+}
+
+@book{hotta_Dmodule,
+  title={D-modules, perverse sheaves, and representation theory},
+  author={Hotta, Ryoshi and Tanisaki, Toshiyuki},
+  volume={236},
+  year={2007},
+  publisher={Springer Science \& Business Media}
 }
