--- a/documentpre.tex
+++ b/documentpre.tex
@@ -169,6 +169,7 @@ root-radius=.06cm]{dynkin-diagrams}
 \def\B{\mathbb{B}}
 \def\Q{\mathbb{Q}}
 \def\Z{\mathbb{Z}}
+\def\D{\mathbb{D}}
 \def\N{\mathbb{N}}
 \def\T{\mathbb{T}}
 \def\H{\mathbb{H}}
@@ -335,6 +336,13 @@ root-radius=.06cm]{dynkin-diagrams}
 \def\Cyc{\mathrm{Cyc}}
 \def\qcoh{\!\mathrm{qcoh}}
 \def\coh{\!\mathrm{coh}}
+\def\an{\mathrm{an}}
+\def\Sol{\mathrm{Sol}}
+\def\Loc{\mathrm{Loc}}
+\def\Conn{\mathrm{Conn}}
+\def\pt{\mathrm{pt}}
+\def\Perv{\mathrm{Perv}}
+\def\ord{\mathrm{ord}}
 %-----------------------------
 
 %-----------------------------mathbf定义
