BBD, perverse sheaf

--- a/Abstract algebra.tex
+++ b/Abstract algebra.tex
@@ -55,16 +55,18 @@ Algebra\\}
 %\include{chapter/Field}
 %\include{chapter/commutative-algebra}
 %\include{chapter/Lie-alg-grp}
-%\include{chapter/sheaf}
+\include{chapter/sheaf}
 %\include{chapter/scheme}
 %\include{chapter/topos-etale-cohomology}
 %\include{chapter/inf-category}
-%\include{chapter/category}
+\include{chapter/category}
 %\include{chapter/group-scheme}
-\include{chapter/D-module}
+
+%\include{chapter/D-module}
 
 %\bibliographystyle{plain}
 %\bibliography{Bibtex}
+
 \end{document}
 
 
