SGA3-1,群概形的Lie代数

--- a/Abstract algebra.tex
+++ b/Abstract algebra.tex
@@ -10,9 +10,9 @@
 \newtheorem{proposition}[theorem]{Proposition}
 
 \theoremstyle{definition}
-\newtheorem{definition}{Definition}[section]
-\newtheorem{example}{Example}[section]
-\newtheorem{remark}{Remark}[section]
+\newtheorem{definition}[theorem]{Definition}
+\newtheorem{example}[theorem]{Example}
+\newtheorem{remark}[theorem]{Remark}
 \newtheorem{exercise}{Exercise}[section]
 
 \allowdisplaybreaks
@@ -55,18 +55,16 @@ Algebra\\}
 %\include{chapter/Field}
 %\include{chapter/commutative-algebra}
 %\include{chapter/Lie-alg-grp}
-\include{chapter/sheaf}
+%\include{chapter/sheaf}
 %\include{chapter/scheme}
-%\include{chapter/topos-etale-cohomology}
+\include{chapter/topos-etale-cohomology}
 %\include{chapter/inf-category}
-\include{chapter/category}
-%\include{chapter/group-scheme}
-
+%\include{chapter/category}
+\include{chapter/group-scheme}
 %\include{chapter/D-module}
 
 %\bibliographystyle{plain}
 %\bibliography{Bibtex}
-
 \end{document}
 
 
