--- a/Bibtex.bib
+++ b/Bibtex.bib
@@ -56,7 +56,7 @@
 
 
 @book{SGA3,
-  title={Sch{\'e}mas en groupes},
+  title={Sch{\'e}mas en groupes I--III},
   author={Grothendieck, Alexandre and Demazure, Michel},
   year={1963},
   publisher={Institut des Hautes Etudes Scientifiques}
@@ -87,7 +87,7 @@
 }
 
 @book{Bourbaki_Topo1-4,
-  title={General Topology: Chapters 1--4},
+  title={General Topology: Chapters 1-4},
   author={Bourbaki, Nicolas},
   volume={18},
   year={2013},
@@ -144,8 +144,9 @@
 @book{Bourbaki_Alg9,
 author = {Bourbaki, Nicolas},
 year = {2007},
-month = {01},
 title = {Algèbre: Chapitre 9},
+publisher={Springer Berlin, Heidelberg}
+
 }
 
 @book{Bourbaki_Alg10,
