--- a/documentpre.tex
+++ b/documentpre.tex
@@ -343,6 +343,8 @@ root-radius=.06cm]{dynkin-diagrams}
 \def\pt{\mathrm{pt}}
 \def\Perv{\mathrm{Perv}}
 \def\ord{\mathrm{ord}}
+\def\Nil{\mathrm{Nil}}
+\def\Lie{\mathrm{Lie}}
 %-----------------------------
 
 %-----------------------------mathbf定义
@@ -370,6 +372,9 @@ root-radius=.06cm]{dynkin-diagrams}
 %--------------------text定义
 \def\et{\textup{\'et}}
 \def\Zar{\textup{Zar}}
+\def\etf{\textup{\'etf}}
+\def\fpqc{\textup{fpqc}}
+\def\fppf{\textup{fppf}}
 \def\dash{\textup{-}}
 %--------------------其他定义
 \def\sub{\subseteq}
@@ -398,6 +403,7 @@ root-radius=.06cm]{dynkin-diagrams}
 \DeclareMathOperator{\sDer}{\mathcal{D}\hspace*{-0.2pt}\textit{er}\hspace{0.5pt}}
 \DeclareMathOperator{\sDiff}{\mathcal{D}\hspace*{-0.2pt}\textit{iff}\hspace{0.5pt}}
 \DeclareMathOperator{\sProj}{\mathscr{P}\hspace*{-0.5pt}\textit{roj}}
+\DeclareMathOperator{\sLie}{\mathscr{L}\hspace*{-0.5pt}\textit{ie}}
 %------------------------------
 
 
