quotient by groupoid

--- a/Abstract algebra.tex
+++ b/Abstract algebra.tex
@@ -53,11 +53,11 @@ Algebra\\}
 %\include{chapter/topo}
 %\include{chapter/ring}
 %\include{chapter/Field}
-%\include{chapter/commutative-algebra}
+\include{chapter/commutative-algebra}
 %\include{chapter/Lie-alg-grp}
 %\include{chapter/sheaf}
-%\include{chapter/scheme}
-\include{chapter/topos-etale-cohomology}
+\include{chapter/scheme}
+%\include{chapter/topos-etale-cohomology}
 %\include{chapter/inf-category}
 %\include{chapter/category}
 \include{chapter/group-scheme}
@@ -65,6 +65,7 @@ Algebra\\}
 
 %\bibliographystyle{plain}
 %\bibliography{Bibtex}
+
 \end{document}
 
 
