--- a/Bibtex.bib
+++ b/Bibtex.bib
@@ -209,3 +209,12 @@ publisher={Springer Berlin, Heidelberg}
   year={2007},
   publisher={Springer Science \& Business Media}
 }
+
+@article{Murre1964,
+  title={Representation of unramified functors. Applications},
+  author={Murre, JP},
+  journal={S{\'e}minaire Bourbaki, Exp},
+  number={294},
+  pages={65},
+  year={1964}
+}
