--- a/documentpre.tex
+++ b/documentpre.tex
@@ -375,6 +375,8 @@ root-radius=.06cm]{dynkin-diagrams}
 \def\etf{\textup{\'etf}}
 \def\fpqc{\textup{fpqc}}
 \def\fppf{\textup{fppf}}
+\def\desc{\textup{desc}}
+\def\comp{\textup{comp}}
 \def\dash{\textup{-}}
 %--------------------其他定义
 \def\sub{\subseteq}
